--- a/src/App.scss
+++ b/src/App.scss
@@ -3,12 +3,15 @@ body {
   margin: 0;
   padding: 0;
 }
+body:hover {
+  cursor: default;
+}
 
 img {
   width: 300px;
   height: 100%;
 }
-/************TYPOGRAPHY**********/
+/************   TYPOGRAPHY   **********/
 nav {
   span {
     font-size: 3rem;
@@ -41,8 +44,23 @@ nav {
     font-size: 1.2rem;
   }
 }
+.side-bar {
+  .widget {
+    h2 {
+      font-weight: 300;
+      color: #190f53;
+      font-size: 2rem;
+    }
+  }
+}
 
-/************LAYOUT**********/
+@media (max-width: 475px) {
+  html {
+    font-size: 8px;
+  }
+}
+
+/************   LAYOUT   **********/
 
 header {
   margin: 0;
@@ -50,12 +68,11 @@ header {
   padding: 2em 0;
   position: fixed;
   top: 0;
-  width: 100%;
 
   nav {
     max-width: 1280px;
     margin: 0 auto;
-    .container {
+    .header-container {
       display: flex;
       justify-content: space-between;
       padding: 1em;
@@ -66,21 +83,19 @@ header {
         padding: 0;
         display: flex;
 
-        .search-container {
-          .search {
-            width: 200px;
-            height: 2em;
-          }
-          i {
-            width: 30px;
-            padding: 0.5em;
-          }
-        }
-
         li {
           list-style: none;
           margin: auto 0;
           margin-left: 2em;
+          .current-route {
+            border-bottom: 2px solid magenta;
+          }
+          div:hover {
+            cursor: pointer;
+          }
+          .current-route:hover {
+            cursor: default;
+          }
         }
       }
     }
@@ -96,7 +111,7 @@ body {
     text-align: center;
     margin-bottom: 1em;
   }
-  .container {
+  .body-container {
     display: flex;
     justify-content: space-between;
     max-width: 1280px;
@@ -105,8 +120,6 @@ body {
     .visz {
       width: 20%;
     }
-
-
 
     .article-list {
       width: 80%;
@@ -137,9 +150,6 @@ body {
       padding: 0;
       .widget {
         h2 {
-          font-weight: 300;
-          color: #190f53;
-          font-size: 2rem;
           margin: 0 0 1em 0;
         }
         ul {
@@ -156,6 +166,12 @@ body {
           background-color: white;
         }
 
+        div {
+          .small-container {
+            display: flex;
+          }
+        }
+
         border: 2px solid magenta;
         padding: 1em;
         margin-bottom: 2em;
@@ -164,30 +180,80 @@ body {
   }
 }
 
+@media (max-width: 475px) {
+  header {
+    width: 100%;
+    margin: 0;
+    nav {
+      max-width: 320px;
+      margin: 0;
+      text-align: center;
+      .header-container {
+        flex-direction: column;
+
+        span {
+          text-align: center;
+        }
+
+        ul {
+          li {
+            margin: 0;
+            margin: 0 auto;
+          }
+        }
+      }
+    }
+  }
+
+  body {
+    margin-top: 12em;
+    .body-container {
+      flex-direction: column-reverse;
+      max-width: 430px;
+      .article-list {
+        width: 100%;
+        .article-card {
+          flex-direction: column;
+        }
+      }
+      .side-bar {
+        width: 100%;
+      }
+    }
+  }
+}
+
+@media (orientation: landscape) {
+  header {
+    width: 100vw;
+  }
+}
+@media (orientation: portrait) {
+  header {
+    width: 100vh;
+  }
+}
+
 /* ********** VISUALIZATIONS ************ */
 
-
 body {
-  .container {
+  .body-container {
+    display: flex;
+    justify-content: space-between;
     .vizs {
       svg {
-        g{
+        g {
           .line-path {
             fill: none;
           }
-          g{
-
+          g {
             .tick {
               line {
                 opacity: 0.2;
               }
-              }
-           
-
+            }
           }
-          
-        } 
-        
+        }
       }
     }
   }
