fix responsive css

--- a/src/App.scss
+++ b/src/App.scss
@@ -245,6 +245,10 @@ body {
           align-items: center;
           .article-list {
             width: 100%;
+            h2 {
+              width: 100%;
+              margin: 0;
+            }
             .article-card {
               flex-direction: column;
               .article {
